refactor: remove use of SecurityManager